added methods update and delete and  file rest
